style: reduce footer font size on mobile to prevent line breaking

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -60,3 +60,14 @@ p.center {
 p.right {
   text-align: right;
 }
+
+footer {
+  font-size: 0.85em;
+  margin-top: 2em;
+}
+
+@media (max-width: 480px) {
+  footer {
+    font-size: 0.7em;
+  }
+}
